Updated to version 2.0.9. See file CHANGES.
git-svn-id: https://svn.aros.org/svn/aros/trunk@28203 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/SDL/SDL_ttf/CHANGES
+++ b/contrib/SDL/SDL_ttf/CHANGES
@@ -1,3 +1,13 @@
+2.0.9:
+Kanou Hiroki - Sat Jul 14 23:15:40 PDT 2007
+ * Fixed rendering of fonts with 2 bit and 4 bit embedded graymaps
+Sam Lantinga - Wed Jun 13 00:32:29 PDT 2007
+ * Fixed bug in solid bold glyph rendering (thanks Roy!)
+Ryan Gordon - Tue Feb 13 10:19:00 2007 UTC
+ * Updated to build with the latest version of FreeType
+Sam Lantinga - Mon Jun 5 16:22:51 2006 UTC
+ * Fixed crash when passing NULL to TTF_CloseFont()
+
 2.0.8:
 Stepan Roh - 2005-10-02 09:46
  * Fixed line spacing by using font ascender and descender
