Shell documents with xrefs as hyperlinks.
git-svn-id: https://svn.aros.org/svn/aros/trunk@29443 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/documentation/documentation/users/shell/install.en
+++ b/documentation/documentation/users/shell/install.en
@@ -71,9 +71,6 @@ Notes
 
 See also
 ~~~~~~~~
-::
 
-
-     Install-i386-pc, Format
-     
+`Install-i386-pc <install-i386-pc>`_ Sys:System/Format   
 
