Updated bug tracker address.
git-svn-id: https://svn.aros.org/svn/aros/trunk@30670 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/Networking/Apps/OWB/README
+++ b/contrib/Networking/Apps/OWB/README
@@ -72,7 +72,7 @@ You can contact me on this e-mail address: sszymczy@gmail.com. Don't write
 me e-mails about bugs in OWB or new features, report them on this page
 instead:
 
-http://code.google.com/p/owb-aros/issues/list
+http://www.sand-labs.org:3789/.Aros/trac
 
 LICENSING
 
@@ -101,7 +101,7 @@ OWB 0.9 (23.02.2009)
 
 LINKS
 
-Visit http://code.google.com/p/owb-aros/issues/list to report bugs and request
+Visit http://www.sand-labs.org:3789/.Aros/trac to report bugs and request
 new features.
 
 Visit http://www.sand-labs.org/owb for more information about OWB.
