--- a/contrib/Networking/Apps/OWB/README
+++ b/contrib/Networking/Apps/OWB/README
@@ -26,6 +26,10 @@ installation is older and you don't want to reinstall the whole system, you
 can try updating only arosc.library and muimaster.library, but there's no
 guarantee that it will work correctly.
 
+Starting from 24.03.2009 AROS contains updated codesets.library that is not
+compatible with the previous version. Updated library will cause OWB version
+0.9.2 and older to crash. OWB 0.9.3 should work correctly.
+
 OWB needs a running TCP/IP stack to work. It's needed even if you only want to
 browse some files offline. See AROS documentation for more information about
 configuring the stack.
@@ -91,7 +95,7 @@ See Licenses directory for more details.
 
 HISTORY
 
-OWB 0.9.3 (09.04.2009) 
+OWB 0.9.3 (10.04.2009) 
   - Implemented feature #21: Placeholders for missing images and plug-ins
   - Fixed bug #23: Frame title set in JavaScript is not cleared when loading a new page
   - Implemented feature #26: Automatic download after clicking on the link
@@ -100,6 +104,7 @@ OWB 0.9.3 (09.04.2009)
   - Fixed bug #36: Redrawing problems with dynamic menu
   - Fixed bug #42: Memory leak during drawing transparent images
   - Fixed bug #44: After about ten executions OWB starts to behave weird
+  - Disabled debug messages
 
 OWB 0.9.2 (01.03.2009) 
   - Fixed bug #1: TGM Online's forum makes OWB crash
