--- a/contrib/Networking/Apps/OWB/README
+++ b/contrib/Networking/Apps/OWB/README
@@ -1,4 +1,4 @@
-OWB 0.9.5 for AROS
+OWB 0.9.6 for AROS
 
 INTRODUCTION
 
@@ -98,6 +98,9 @@ WebCore/JSCore code where the original licenses apply (APSL, LGPL and BSD).
 See Licenses directory for more details.
 
 HISTORY
+
+OWB 0.9.6 (11.06.2009)
+  - Fixed crashes when opening preferences window
 
 OWB 0.9.5 (10.06.2009)
   - Fixed bugs introduced in the previous release: 
